--- a/modules/tinymce/changelog.txt
+++ b/modules/tinymce/changelog.txt
@@ -1,4 +1,6 @@
 Version 5.5.0 (TBD)
+    Added new `table_column_sizing` setting to control how the table is affected when resizing columns via the resize bars #TINY-6001
+    Fixed an issue where column resizing via the resize bars was inconsistent between fixed and relative table widths #TINY-6001
     Fixed the `media` plugin not saving the alternative source url in some situations #TINY-4113
 Version 5.4.0 (2020-06-30)
     Added keyboard navigation support to menus and toolbars when the editor is in a ShadowRoot #TINY-6152
